Version 2.0 - 2018-04-13
* BUG#7623 check amended mandates only when contract status is quote

Version 1.14 - 2017-11-09
* BUG#7400 Reset sepa mandate if no possible mandate is found
* BUG#7239 Do not check amended mandates when reactivating a contract
* BUG#6902 Fix billing information endorsement with no payer
* BUG#6862 Fix search for contracts and mandates when amending SEPA mandate

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Update existing invoices with new sepa mandates when changing bank accounts

Version 1.6 - 2015-12-23
* FEA#0000 Module Creation